[package]
name = "mining-proxy"
version = "0.0.1"
authors = ["matt"]

[[bin]]
name = "mining-proxy"
path = "src/single_user_proxy.rs"

[[bin]]
name = "pool-proxy"
path = "src/multi_user_proxy.rs"

[[bin]]
name = "sample-pool"
path = "src/sample_pool.rs"

[features]
kafka_submitter = [ "rdkafka", "serde", "serde_derive" ]

[dependencies]
secp256k1 = "0.9"
base64 = "0.9"
bitcoin = "0.13"
bytes = "0.4"
futures = "0.1"
tokio = "0.1"
tokio-io = "0.1"
tokio-codec = "0.1"
rust-crypto = "0.2"
serde_json = "1.0"
hyper = "0.12"

serde = { version = "1.0.70", optional = true }
serde_derive = { version = "1.0", optional = true }
rdkafka = { version = "0.17.0", optional = true }
